pycurl (7.43.0-2) UNRELEASED; urgency=medium

  * Fixed VCS URL (https)
  * Bump debhelper compat version to 9
  * Standards-Version is 3.9.8 now (no changes needed)
  * Removed privacy breach in docs

 -- Ondřej Nový <novy@ondrej.org>  Tue, 29 Mar 2016 21:48:29 +0200

pycurl (7.43.0-1) unstable; urgency=medium

  * New upstream release.
  * d/control:
    - Add python{,3}-flaky to Build-Depends for test suite.
    - Test suite runs at build time but still fails, so continue not to fail.
    - Bump Standards-Version to 3.9.7 with no other changes necessary.
  * d/tests: Add a live test which downloads a well published resource.
    (Closes: #763770)

 -- Barry Warsaw <barry@debian.org>  Thu, 10 Mar 2016 11:19:37 -0500

pycurl (7.21.5-1) unstable; urgency=medium

  * New upstream release.
  * d/tests/control: Add a smoketest for Python 2 and 3.

 -- Barry Warsaw <barry@debian.org>  Tue, 12 Jan 2016 14:53:53 -0500

pycurl (7.19.5.3-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * 30_find-perm_slash.diff: Use "find -perm /x" instead of "find -perm +x".
    Closes: #808922

 -- Andreas Metzler <ametzler@debian.org>  Tue, 29 Dec 2015 14:30:53 +0100

pycurl (7.19.5.3-1) unstable; urgency=medium

  * New upstream release.

 -- Barry Warsaw <barry@debian.org>  Wed, 18 Nov 2015 13:46:28 -0500

pycurl (7.19.5.1-1) unstable; urgency=medium

  * New upstream release.
  * d/watch: Use pypi.debian.net mirror.
  * d/control: Bump Standards-Version to 3.9.6

 -- Barry Warsaw <barry@debian.org>  Mon, 27 Apr 2015 16:57:54 -0400

pycurl (7.19.5-3) unstable; urgency=medium

  * d/watch: Updated download URL to point to PyPI.
  * d/patches/0003-upstream-issue-210.patch: Added a proposed fix for
    upstream issue #210.

 -- Barry Warsaw <barry@debian.org>  Tue, 14 Oct 2014 16:56:10 -0400

pycurl (7.19.5-2) unstable; urgency=medium

  * d/control: Update the Vcs-* headers for the move to git-dpm.

 -- Barry Warsaw <barry@debian.org>  Wed, 01 Oct 2014 19:42:50 -0400
