@@ -1,11 +1,15 @@
 pycurl (7.43.0-2) UNRELEASED; urgency=medium
 
+  [ Ondřej Nový ]
   * Fixed VCS URL (https)
   * Bump debhelper compat version to 9
   * Standards-Version is 3.9.8 now (no changes needed)
   * Removed privacy breach in docs
 
- -- Ondřej Nový <novy@ondrej.org>  Tue, 29 Mar 2016 21:48:29 +0200
+  [ Barry Warsaw ]
+  * d/rules: Prevent network access during package tests. (Closes: #830281)
+
+ -- Barry Warsaw <barry@debian.org>  Tue, 29 Mar 2016 21:48:29 +0200
 
 pycurl (7.43.0-1) unstable; urgency=medium
 
